# mash

./: Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  checksum_file.rs  cli.rs  diff.rs  main.rs  manifest_reader.rs  util.rs
src/gui/: compare_panel.rs  creator_info.rs  folder_panel.rs  mod.rs  options_panel.rs  progress_panel.rs
src/hashing/: algorithms.rs  directory_hash.rs  engine.rs  mod.rs
src/mhl/: chain.rs  mod.rs  naming.rs  types.rs  writer.rs
