[package]
name = "mash"
version = "0.1.0"
edition = "2021"
description = "MASH - Media Asset Hash - ASC MHL generator"
license = "Apache-2.0"
authors = ["Saker Klippsten"]

[dependencies]
# GUI
eframe = "0.31"
egui = "0.31"
rfd = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3", "std"] }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
bs58 = "0.5"

# XML
quick-xml = "0.37"

# Utility
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
